# txt-sushi

./: .boring  COPYING  GNUmakefile  Setup.hs  csvtopretty.hs  csvtotab.hs  csvzip.hs  example.csv  index.html  joinandfilter.bash  joincol.hs  namecolumns.hs  selectcol.hs  selectcolname.hs  simplejoin.bash  sortcol.hs  tabtocsv.hs  tabtopretty.hs  transposecsv.hs  transposetab.hs  tssql.hs  tssql.html  txt-sushi.cabal
Database/TxtSushi/: CommandLineArgument.hs  EvaluatedExpression.hs  ExternalSort.hs  FlatFile.hs  IO.hs  IOUtil.hs  ParseUtil.hs  Relational.hs  SQLExecution.hs  SQLExpression.hs  SQLFunctionDefinitions.hs  SQLParser.hs  Transform.hs
Database/TxtSushi/Util/: CommandLineArgument.hs  IOUtil.hs  ListUtil.hs
Table/: IO.hs  Transform.hs
TxtSushi/: IO.hs  SQLExecution.hs  SQLParser.hs  Transform.hs
TxtSushi/Util/: CommandLineArgument.hs  IOUtil.hs  ListUtil.hs
Util/: CommandLineArgument.hs  IOUtil.hs  ListUtil.hs
examples/: aggregate-mgi-markers-chr1-only.bash  aggregate-mgi-markers.bash  create-view-metricstats.bash  employee-inner-join.bash  example2.csv  exponents.bash  exponents.csv  issue24.bash  issue24.csv  issue38.bash  join-stats-station.bash  kitchen-sink.bash  makerandomtable.lhs  query-imputed-SNPs-aliased.bash  query-imputed-SNPs-external.bash  query-imputed-SNPs-nested.bash  query-imputed-SNPs-regex.bash  query-imputed-SNPs.bash  query-mgi-markers.bash  select-station.bash  select-station1.bash  simple-filter.bash  simple-join.bash  station.csv  weather-aggregates.bash
tests/: dos-snp-sample.csv  employees.csv  mac-snp-sample.csv  maybe-nums.csv  orders.csv  runtests.bash  snp-sample.csv  station-w-prefix.csv  stats.csv  test1.1.bash  test1.2.bash  test1.expected  test10.1.bash  test10.expected  test11.1.bash  test11.expected  test12.1.bash  test12.expected  test13.1.bash  test13.expected  test14.1.bash  test14.2.bash  test14.3.bash  test15.1.bash  test15.expected  test16.1.bash  test16.expected  test17.1.bash  test17.expected  test18.1.bash  test18.expected  test19.1.bash  test19.2.bash  test19.expected  test2.1.bash  test2.expected  test20.1.bash  test20.2.bash  test20.expected  test3.1.bash  (+12 more)
