Name:                txt-sushi
Version:             0.2
Synopsis:            Spreadsheets are databases!
Description:
    TxtSushi is a collection of command line utilities for processing
    comma-separated and tab-delimited files (AKA flat files, spreadsheets).
    By focusing exclusively on processing text files with a tabular structure,
    TxtSushi simplifies common tasks like filtering, joining and transformation
    that would take some effort to accomplish with a more powerful scripting
    language. TxtSushi's homepage is <http://keithsheppard.name/txt-sushi>.
License:             GPL
License-File:        COPYING
Author:              Keith Sheppard
Maintainer:          keithshep@gmail.com
Build-Type:          Simple
Category:            Utils, Text, Database
Cabal-Version:       >=1.2

Executable tssql
  Main-Is:          tssql.hs
  Build-Depends:    base,haskell98,directory,containers,parsec,regex-posix
  
  -- creates highly optimized code (slow compile)
  GHC-Options:      -O2 -fvia-C
  
  -- combine the following with the +RTS -xc -RTS runtime option for stack taces
  --GHC-Options:      -prof -auto-all

Executable csvtotab
  Main-Is:          csvtotab.hs
  Build-Depends:    base,haskell98,directory,containers
  GHC-Options:      -O2 -fvia-C

Executable tabtocsv
  Main-Is:          tabtocsv.hs
  Build-Depends:    base,haskell98,directory,containers
  GHC-Options:      -O2 -fvia-C

Executable csvtopretty
  Main-Is:          csvtopretty.hs
  Build-Depends:    base,haskell98,directory,containers
  GHC-Options:      -O2 -fvia-C

Executable tabtopretty
  Main-Is:          tabtopretty.hs
  Build-Depends:    base,haskell98,directory,containers
  GHC-Options:      -O2 -fvia-C
