Name:                txt-sushi
Version:             0.4.0
Synopsis:            Spreadsheets are databases!
Description:
    TxtSushi is a collection of command line utilities for processing
    comma-separated and tab-delimited files (AKA flat files, spreadsheets).
    The most important utility (tssql) lets you perform SQL selects on CSV files.
    By focusing exclusively on processing text files with a tabular structure,
    TxtSushi simplifies common tasks like filtering, joining and transformation
    that would take more effort to accomplish with a general purpose text
    processing language.
License:             GPL
License-File:        COPYING
Author:              Keith Sheppard
Maintainer:          keithshep@gmail.com
Homepage:            http://keithsheppard.name/txt-sushi
Bug-Reports:         http://code.google.com/p/txt-sushi/issues/list
Build-Type:          Simple
Category:            Database, Utils, Text
Cabal-Version:       >= 1.6

Source-Repository head
  type:     darcs
  location: http://patch-tag.com/r/keithshep/txt-sushi/pullrepo

Source-Repository this
  type:     darcs
  location: http://patch-tag.com/r/keithshep/txt-sushi/pullrepo
  tag:      0.4.0

Executable tssql
  Main-Is:          tssql.hs
  GHC-Options:      -O2 -Wall
  
  -- combine the following with the +RTS -xc -RTS runtime option for stack taces
  --GHC-Options:      -prof -auto-all

Executable csvtotab
  Main-Is:          csvtotab.hs
  GHC-Options:      -O2 -Wall

Executable tabtocsv
  Main-Is:          tabtocsv.hs
  GHC-Options:      -O2 -Wall

Executable csvtopretty
  Main-Is:          csvtopretty.hs
  GHC-Options:      -O2 -Wall

Executable tabtopretty
  Main-Is:          tabtopretty.hs
  GHC-Options:      -O2 -Wall

Executable namecolumns
  Main-Is:          namecolumns.hs
  GHC-Options:      -O2 -Wall

Executable transposecsv
  Main-Is:          transposecsv.hs
  GHC-Options:      -O2 -Wall

Executable transposetab
  Main-Is:          transposetab.hs
  GHC-Options:      -O2 -Wall

Library
  Exposed-Modules:
    Database.TxtSushi.ExternalSort
    Database.TxtSushi.IO
    Database.TxtSushi.SQLExecution
    Database.TxtSushi.SQLParser
    Database.TxtSushi.Transform
    Database.TxtSushi.Util.CommandLineArgument
    Database.TxtSushi.Util.IOUtil
    Database.TxtSushi.Util.ListUtil
  
  Build-Depends:    base >= 3 && < 5,binary,bytestring,containers,directory,parsec,regex-posix
  GHC-Options:      -O2 -Wall
