Name:                txt-sushi
Version:             0.6.0
Synopsis:            The SQL link in your *NIX chain
Description:
    txt-sushi is a collection of command line utilities for processing
    comma-separated and tab-delimited files (AKA flat files, spreadsheets).
    The most important utility (tssql) lets you perform SQL selects on CSV files.
    By focusing exclusively on processing text files with a tabular structure,
    TxtSushi simplifies common tasks like filtering, joining and transformation
    that would take more effort to accomplish with a general purpose text
    processing language.
License:             BSD3
License-File:        COPYING
Author:              Keith Sheppard
Maintainer:          keithshep@gmail.com
Homepage:            http://keithsheppard.name/txt-sushi
Bug-Reports:         https://github.com/keithshep/txt-sushi/issues
Build-Type:          Simple
Category:            Database, Console
Cabal-Version:       >= 1.6

Source-Repository head
  type:     git
  location: git://github.com/keithshep/txt-sushi.git

Source-Repository this
  type:     git
  location: git://github.com/keithshep/txt-sushi.git
  tag:      0.6.0

Executable tssql
  Main-Is:          tssql.hs
  GHC-Options:      -O2 -Wall
  
  -- combine the following with the +RTS -xc -RTS runtime option for stack taces
  --GHC-Options:      -prof -auto-all

Executable csvtotab
  Main-Is:          csvtotab.hs
  GHC-Options:      -O2 -Wall

Executable tabtocsv
  Main-Is:          tabtocsv.hs
  GHC-Options:      -O2 -Wall

Executable csvtopretty
  Main-Is:          csvtopretty.hs
  GHC-Options:      -O2 -Wall

Executable tabtopretty
  Main-Is:          tabtopretty.hs
  GHC-Options:      -O2 -Wall

Executable namecolumns
  Main-Is:          namecolumns.hs
  GHC-Options:      -O2 -Wall

Executable transposecsv
  Main-Is:          transposecsv.hs
  GHC-Options:      -O2 -Wall

Executable transposetab
  Main-Is:          transposetab.hs
  GHC-Options:      -O2 -Wall

Executable csvzip
  Main-Is:          csvzip.hs
  GHC-Options:      -O2 -Wall

Library
  Exposed-Modules:
    Database.TxtSushi.CommandLineArgument
    Database.TxtSushi.EvaluatedExpression
    Database.TxtSushi.ExternalSort
    Database.TxtSushi.FlatFile
    Database.TxtSushi.IOUtil
    Database.TxtSushi.ParseUtil
    Database.TxtSushi.Relational
    Database.TxtSushi.SQLExecution
    Database.TxtSushi.SQLExpression
    Database.TxtSushi.SQLFunctionDefinitions
    Database.TxtSushi.SQLParser
  
  Build-Depends:    base >= 3 && < 5,binary,bytestring,containers,directory,parsec,regex-posix
  GHC-Options:      -O2 -Wall
